--- a/argocd-helm-charts/cilium/charts/cilium/templates/cilium-ingress-service.yaml
+++ b/argocd-helm-charts/cilium/charts/cilium/templates/cilium-ingress-service.yaml
@@ -23,17 +23,22 @@ spec:
     port: 443
     protocol: TCP
     nodePort: {{ .Values.ingressController.service.secureNodePort }}
+  {{- if .Values.ingressController.hostNetwork.enabled }}
+  type: ClusterIP
+  {{- else }}
   type: {{ .Values.ingressController.service.type }}
-  {{- if semverCompare ">=1.24-0" .Capabilities.KubeVersion.Version -}}
+  {{- end }}
   {{- if .Values.ingressController.service.loadBalancerClass }}
   loadBalancerClass: {{ .Values.ingressController.service.loadBalancerClass }}
   {{- end }}
   {{- if (not (kindIs "invalid" .Values.ingressController.service.allocateLoadBalancerNodePorts)) }}
   allocateLoadBalancerNodePorts: {{ .Values.ingressController.service.allocateLoadBalancerNodePorts }}
   {{- end }}
-  {{- end -}}
   {{- if .Values.ingressController.service.loadBalancerIP }}
   loadBalancerIP: {{ .Values.ingressController.service.loadBalancerIP }}
+  {{- end }}
+  {{- if .Values.ingressController.service.externalTrafficPolicy }}
+  externalTrafficPolicy: {{ .Values.ingressController.service.externalTrafficPolicy }}
   {{- end }}
 ---
 apiVersion: v1
