--- a/argocd-helm-charts/cilium/charts/cilium/templates/cilium-preflight/daemonset.yaml
+++ b/argocd-helm-charts/cilium/charts/cilium/templates/cilium-preflight/daemonset.yaml
@@ -86,7 +86,7 @@ spec:
           - name: etcd-config-path
             mountPath: /var/lib/etcd-config
             readOnly: true
-          {{- if or .Values.etcd.ssl .Values.etcd.managed }}
+          {{- if .Values.etcd.ssl }}
           - name: etcd-secrets
             mountPath: /var/lib/etcd-secrets
             readOnly: true
@@ -132,11 +132,9 @@ spec:
           env:
           {{- if .Values.k8sServiceHost }}
           - name: KUBERNETES_SERVICE_HOST
-            value: {{ .Values.k8sServiceHost | quote }}
-          {{- end }}
-          {{- if .Values.k8sServicePort }}
+            value: {{ include "k8sServiceHost" . }}
           - name: KUBERNETES_SERVICE_PORT
-            value: {{ .Values.k8sServicePort | quote }}
+            value: {{ include "k8sServicePort" . }}
           {{- end }}
           volumeMounts:
           - name: cilium-run
@@ -145,7 +143,7 @@ spec:
           - name: etcd-config-path
             mountPath: /var/lib/etcd-config
             readOnly: true
-          {{- if or .Values.etcd.ssl .Values.etcd.managed }}
+          {{- if .Values.etcd.ssl }}
           - name: etcd-secrets
             mountPath: /var/lib/etcd-secrets
             readOnly: true
@@ -168,15 +166,9 @@ spec:
           terminationMessagePolicy: FallbackToLogsOnError
         {{- end }}
       hostNetwork: true
-      # This is here to seamlessly allow migrate-identity to work with
-      # etcd-operator setups. The assumption is that other cases would also
-      # work since the cluster DNS would forward the request on.
-      # This differs from the cilium-agent daemonset, where this is only
-      # enabled when etcd.managed=true
       dnsPolicy: ClusterFirstWithHostNet
       restartPolicy: Always
       priorityClassName: {{ include "cilium.priorityClass" (list $ .Values.preflight.priorityClassName "system-node-critical") }}
-      serviceAccount: {{ .Values.serviceAccounts.preflight.name | quote }}
       serviceAccountName: {{ .Values.serviceAccounts.preflight.name | quote }}
       automountServiceAccountToken: {{ .Values.serviceAccounts.preflight.automount }}
       terminationGracePeriodSeconds: {{ .Values.preflight.terminationGracePeriodSeconds }}
@@ -209,7 +201,7 @@ spec:
           - key: etcd-config
             path: etcd.config
         # To read the k8s etcd secrets in case the user might want to use TLS
-      {{- if or .Values.etcd.ssl .Values.etcd.managed }}
+      {{- if .Values.etcd.ssl }}
       - name: etcd-secrets
         secret:
           secretName: cilium-etcd-secrets
