--- a/argocd-helm-charts/cilium/charts/cilium/templates/clustermesh-apiserver/clusterrole.yaml
+++ b/argocd-helm-charts/cilium/charts/cilium/templates/clustermesh-apiserver/clusterrole.yaml
@@ -1,4 +1,4 @@
-{{- if and (or .Values.externalWorkloads.enabled .Values.clustermesh.useAPIServer) .Values.serviceAccounts.clustermeshApiserver.create }}
+{{- if and (or .Values.externalWorkloads.enabled .Values.clustermesh.useAPIServer) .Values.serviceAccounts.clustermeshApiserver.create .Values.rbac.create }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
@@ -10,6 +10,7 @@ metadata:
     {{- toYaml . | nindent 4 }}
   {{- end }}
 rules:
+{{- if .Values.externalWorkloads.enabled }}
 - apiGroups:
   - cilium.io
   resources:
@@ -33,11 +34,14 @@ rules:
   - ciliumendpoints/status
   verbs:
   - patch
+{{- end }}
 - apiGroups:
   - cilium.io
   resources:
   - ciliumidentities
+{{- if .Values.externalWorkloads.enabled }}
   - ciliumexternalworkloads
+{{- end }}
   - ciliumendpoints
   - ciliumnodes
   verbs:
