--- a/argocd-helm-charts/cilium/charts/cilium/templates/hubble-relay/service.yaml
+++ b/argocd-helm-charts/cilium/charts/cilium/templates/hubble-relay/service.yaml
@@ -4,10 +4,14 @@ apiVersion: v1
 metadata:
   name: hubble-relay
   namespace: {{ .Release.Namespace }}
-  {{- with .Values.hubble.relay.annotations }}
   annotations:
+    {{- with .Values.hubble.relay.annotations }}
     {{- toYaml . | nindent 4 }}
-  {{- end }}
+    {{- end }}
+    {{- if and .Values.hubble.relay.prometheus.enabled (not .Values.hubble.relay.prometheus.serviceMonitor.enabled) }}
+    prometheus.io/scrape: "true"
+    prometheus.io/port: {{ .Values.hubble.relay.prometheus.port | quote }}
+    {{- end }}
   labels:
     k8s-app: hubble-relay
     app.kubernetes.io/name: hubble-relay
@@ -23,7 +27,7 @@ spec:
   {{- else }}
     port: {{ .Values.hubble.relay.tls.server.enabled | ternary 443 80 }}
   {{- end }}
-    targetPort: {{ .Values.hubble.relay.listenPort }}
+    targetPort: {{ include "hubble-relay.service.targetPort" . }}
     {{- if and (eq "NodePort" .Values.hubble.relay.service.type) .Values.hubble.relay.service.nodePort }}
     nodePort: {{ .Values.hubble.relay.service.nodePort }}
     {{- end }}
