--- a/argocd-helm-charts/cilium/charts/cilium/templates/hubble/tls-helm/metrics-server-secret.yaml
+++ b/argocd-helm-charts/cilium/charts/cilium/templates/hubble/tls-helm/metrics-server-secret.yaml
@@ -1,14 +1,14 @@
-{{- if and .Values.agent .Values.hubble.enabled .Values.hubble.tls.enabled .Values.hubble.tls.auto.enabled (eq .Values.hubble.tls.auto.method "helm") }}
+{{- if and .Values.agent .Values.hubble.enabled .Values.hubble.metrics.tls.enabled .Values.hubble.tls.auto.enabled (eq .Values.hubble.tls.auto.method "helm") }}
 {{- $_ := include "cilium.ca.setup" . -}}
-{{- $cn := list "*" (.Values.cluster.name | replace "." "-") "hubble-grpc.cilium.io" | join "." }}
-{{- $ip := .Values.hubble.tls.server.extraIpAddresses }}
-{{- $dns := prepend .Values.hubble.tls.server.extraDnsNames $cn }}
+{{- $cn := list (.Values.cluster.name | replace "." "-") "hubble-metrics.cilium.io" | join "." }}
+{{- $ip := .Values.hubble.metrics.tls.server.extraIpAddresses }}
+{{- $dns := prepend .Values.hubble.metrics.tls.server.extraDnsNames $cn }}
 {{- $cert := genSignedCert $cn $ip $dns (.Values.hubble.tls.auto.certValidityDuration | int) .commonCA -}}
 ---
 apiVersion: v1
 kind: Secret
 metadata:
-  name: hubble-server-certs
+  name: hubble-metrics-server-certs
   namespace: {{ .Release.Namespace }}
   {{- with .Values.hubble.annotations }}
   annotations:
