--- a/argocd-helm-charts/cilium/charts/cilium/templates/clustermesh-apiserver/tls-cronjob/role.yaml
+++ b/argocd-helm-charts/cilium/charts/cilium/templates/clustermesh-apiserver/tls-cronjob/role.yaml
@@ -34,6 +34,7 @@ rules:
       - clustermesh-apiserver-server-cert
       - clustermesh-apiserver-admin-cert
       - clustermesh-apiserver-remote-cert
+      - clustermesh-apiserver-local-cert
       - clustermesh-apiserver-client-cert
     verbs:
       - update
