--- a/argocd-helm-charts/cilium/charts/cilium/templates/cilium-agent/service.yaml
+++ b/argocd-helm-charts/cilium/charts/cilium/templates/cilium-agent/service.yaml
@@ -1,3 +1,4 @@
+{{- $envoyDS := eq (include "envoyDaemonSetEnabled" .) "true" -}}
 {{- if and .Values.agent (not .Values.preflight.enabled) .Values.prometheus.enabled }}
 {{- if .Values.prometheus.serviceMonitor.enabled }}
 apiVersion: v1
@@ -23,13 +24,13 @@ spec:
     port: {{ .Values.prometheus.port }}
     protocol: TCP
     targetPort: prometheus
-  {{- if not .Values.envoy.enabled }}
+  {{- if not $envoyDS }}
   - name: envoy-metrics
-    port: {{ .Values.proxy.prometheus.port | default .Values.envoy.prometheus.port }}
+    port: {{ .Values.envoy.prometheus.port }}
     protocol: TCP
     targetPort: envoy-metrics
   {{- end }}
-{{- else if and .Values.proxy.prometheus.enabled .Values.envoy.prometheus.enabled (not .Values.envoy.enabled) }}
+{{- else if and .Values.envoy.prometheus.enabled (not $envoyDS) }}
 apiVersion: v1
 kind: Service
 metadata:
@@ -37,7 +38,7 @@ metadata:
   namespace: {{ .Release.Namespace }}
   annotations:
     prometheus.io/scrape: "true"
-    prometheus.io/port: {{ .Values.proxy.prometheus.port | default .Values.envoy.prometheus.port | quote }}
+    prometheus.io/port: {{ .Values.envoy.prometheus.port | quote }}
   labels:
     k8s-app: cilium
     app.kubernetes.io/name: cilium-agent
@@ -49,7 +50,7 @@ spec:
     k8s-app: cilium
   ports:
   - name: envoy-metrics
-    port: {{ .Values.proxy.prometheus.port | default .Values.envoy.prometheus.port }}
+    port: {{ .Values.envoy.prometheus.port }}
     protocol: TCP
     targetPort: envoy-metrics
 {{- end }}
