--- a/argocd-helm-charts/cilium/charts/cilium/templates/cilium-envoy/configmap.yaml
+++ b/argocd-helm-charts/cilium/charts/cilium/templates/cilium-envoy/configmap.yaml
@@ -1,4 +1,5 @@
-{{- if and .Values.envoy.enabled (not .Values.preflight.enabled) }}
+{{- $envoyDS := eq (include "envoyDaemonSetEnabled" .) "true" -}}
+{{- if and $envoyDS (not .Values.preflight.enabled) }}
 
 ---
 apiVersion: v1
