--- a/argocd-helm-charts/cilium/charts/cilium/templates/cilium-envoy/serviceaccount.yaml
+++ b/argocd-helm-charts/cilium/charts/cilium/templates/cilium-envoy/serviceaccount.yaml
@@ -1,4 +1,5 @@
-{{- if and .Values.envoy.enabled (not .Values.preflight.enabled) .Values.serviceAccounts.envoy.create }}
+{{- $envoyDS := eq (include "envoyDaemonSetEnabled" .) "true" -}}
+{{- if and $envoyDS (not .Values.preflight.enabled) .Values.serviceAccounts.envoy.create }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
