--- a/argocd-helm-charts/cilium/charts/cilium/templates/cilium-operator/clusterrolebinding.yaml
+++ b/argocd-helm-charts/cilium/charts/cilium/templates/cilium-operator/clusterrolebinding.yaml
@@ -1,4 +1,4 @@
-{{- if and .Values.operator.enabled .Values.serviceAccounts.operator.create }}
+{{- if and .Values.operator.enabled .Values.serviceAccounts.operator.create .Values.rbac.create }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
