--- a/argocd-helm-charts/cilium/charts/cilium/templates/cilium-preflight/deployment.yaml
+++ b/argocd-helm-charts/cilium/charts/cilium/templates/cilium-preflight/deployment.yaml
@@ -46,20 +46,13 @@ spec:
             cilium-dbg preflight validate-cnp;
             touch /tmp/ready-validate-cnp;
             sleep 1h;
-          livenessProbe:
-            exec:
-              command:
-              - cat
-              - /tmp/ready-validate-cnp
-            initialDelaySeconds: 5
-            periodSeconds: 5
           readinessProbe:
             exec:
               command:
               - cat
               - /tmp/ready-validate-cnp
-            initialDelaySeconds: 5
-            periodSeconds: 5
+            initialDelaySeconds: {{ .Values.preflight.readinessProbe.initialDelaySeconds }}
+            periodSeconds: {{ .Values.preflight.readinessProbe.periodSeconds }}
           {{- with .Values.preflight.extraVolumeMounts }}
           volumeMounts:
           {{- toYaml . | nindent 10 }}
@@ -67,11 +60,9 @@ spec:
           env:
           {{- if .Values.k8sServiceHost }}
           - name: KUBERNETES_SERVICE_HOST
-            value: {{ .Values.k8sServiceHost | quote }}
-          {{- end }}
-          {{- if .Values.k8sServicePort }}
+            value: {{ include "k8sServiceHost" . }}
           - name: KUBERNETES_SERVICE_PORT
-            value: {{ .Values.k8sServicePort | quote }}
+            value: {{ include "k8sServicePort" . }}
           {{- end }}
           {{- with .Values.preflight.extraEnv }}
           {{- toYaml . | trim | nindent 10 }}
@@ -88,7 +79,6 @@ spec:
       hostNetwork: true
       restartPolicy: Always
       priorityClassName: {{ include "cilium.priorityClass" (list $ .Values.preflight.priorityClassName "system-cluster-critical") }}
-      serviceAccount: {{ .Values.serviceAccounts.preflight.name | quote }}
       serviceAccountName: {{ .Values.serviceAccounts.preflight.name | quote }}
       automountServiceAccountToken: {{ .Values.serviceAccounts.preflight.automount }}
       terminationGracePeriodSeconds: {{ .Values.preflight.terminationGracePeriodSeconds }}
