--- a/argocd-helm-charts/cilium/charts/cilium/templates/clustermesh-apiserver/tls-certmanager/local-secret.yaml
+++ b/argocd-helm-charts/cilium/charts/cilium/templates/clustermesh-apiserver/tls-certmanager/local-secret.yaml
@@ -1,9 +1,9 @@
-{{- if and (or .Values.externalWorkloads.enabled .Values.clustermesh.useAPIServer) .Values.clustermesh.apiserver.tls.auto.enabled (eq .Values.clustermesh.apiserver.tls.auto.method "certmanager") }}
+{{- if and .Values.clustermesh.useAPIServer .Values.clustermesh.apiserver.kvstoremesh.enabled .Values.clustermesh.apiserver.tls.auto.enabled (eq .Values.clustermesh.apiserver.tls.auto.method "certmanager") }}
 ---
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: clustermesh-apiserver-admin-cert
+  name: clustermesh-apiserver-local-cert
   namespace: {{ .Release.Namespace }}
   {{- with .Values.clustermesh.annotations }}
   annotations:
@@ -12,7 +12,7 @@ metadata:
 spec:
   issuerRef:
     {{- toYaml .Values.clustermesh.apiserver.tls.auto.certManagerIssuerRef | nindent 4 }}
-  secretName: clustermesh-apiserver-admin-cert
-  commonName: {{ include "clustermesh-apiserver-generate-certs.admin-common-name" . }}
+  secretName: clustermesh-apiserver-local-cert
+  commonName: {{ include "clustermesh-apiserver-generate-certs.local-common-name" . }}
   duration: {{ printf "%dh0m0s" (mul .Values.clustermesh.apiserver.tls.auto.certValidityDuration 24) }}
 {{- end }}
