--- a/argocd-helm-charts/cilium/charts/cilium/templates/clustermesh-apiserver/tls-helm/local-secret.yaml
+++ b/argocd-helm-charts/cilium/charts/cilium/templates/clustermesh-apiserver/tls-helm/local-secret.yaml
@@ -1,12 +1,12 @@
-{{- if and (or .Values.externalWorkloads.enabled .Values.clustermesh.useAPIServer) .Values.clustermesh.apiserver.tls.auto.enabled (eq .Values.clustermesh.apiserver.tls.auto.method "helm") }}
+{{- if and .Values.clustermesh.useAPIServer .Values.clustermesh.apiserver.kvstoremesh.enabled .Values.clustermesh.apiserver.tls.auto.enabled (eq .Values.clustermesh.apiserver.tls.auto.method "helm") }}
 {{- $_ := include "cilium.ca.setup" . -}}
-{{- $cn := include "clustermesh-apiserver-generate-certs.admin-common-name" . -}}
+{{- $cn := include "clustermesh-apiserver-generate-certs.local-common-name" . -}}
 {{- $cert := genSignedCert $cn nil nil (.Values.clustermesh.apiserver.tls.auto.certValidityDuration | int) .commonCA -}}
 ---
 apiVersion: v1
 kind: Secret
 metadata:
-  name: clustermesh-apiserver-admin-cert
+  name: clustermesh-apiserver-local-cert
   namespace: {{ .Release.Namespace }}
   {{- with .Values.clustermesh.annotations }}
   annotations:
