--- a/argocd-helm-charts/cilium/charts/cilium/templates/clustermesh-apiserver/tls-provided/client-secret.yaml
+++ b/argocd-helm-charts/cilium/charts/cilium/templates/clustermesh-apiserver/tls-provided/client-secret.yaml
@@ -1,4 +1,5 @@
 {{- if and .Values.externalWorkloads.enabled (not .Values.clustermesh.apiserver.tls.auto.enabled) }}
+{{- if .Values.clustermesh.apiserver.tls.enableSecrets }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -13,4 +14,5 @@ data:
   ca.crt: {{ .Values.tls.ca.cert }}
   tls.crt: {{ .Values.clustermesh.apiserver.tls.client.cert | required "missing clustermesh.apiserver.tls.client.cert" }}
   tls.key: {{ .Values.clustermesh.apiserver.tls.client.key  | required "missing clustermesh.apiserver.tls.client.key" }}
+{{- end }}
 {{- end }}
