--- a/argocd-helm-charts/cilium/charts/cilium/templates/clustermesh-apiserver/tls-provided/server-secret.yaml
+++ b/argocd-helm-charts/cilium/charts/cilium/templates/clustermesh-apiserver/tls-provided/server-secret.yaml
@@ -1,4 +1,5 @@
 {{- if and (or .Values.externalWorkloads.enabled .Values.clustermesh.useAPIServer) (not .Values.clustermesh.apiserver.tls.auto.enabled) }}
+{{- if .Values.clustermesh.apiserver.tls.enableSecrets }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -13,4 +14,5 @@ data:
   ca.crt: {{ .Values.tls.ca.cert }}
   tls.crt: {{ .Values.clustermesh.apiserver.tls.server.cert | required "missing clustermesh.apiserver.tls.server.cert" }}
   tls.key: {{ .Values.clustermesh.apiserver.tls.server.key  | required "missing clustermesh.apiserver.tls.server.key"  }}
+{{- end }}
 {{- end }}
