--- a/argocd-helm-charts/cilium/charts/cilium/templates/clustermesh-apiserver/users-configmap.yaml
+++ b/argocd-helm-charts/cilium/charts/cilium/templates/clustermesh-apiserver/users-configmap.yaml
@@ -1,4 +1,7 @@
-{{- if ne .Values.clustermesh.apiserver.tls.authMode "legacy" }}
+{{- if and
+  (or .Values.externalWorkloads.enabled .Values.clustermesh.useAPIServer)
+  (ne .Values.clustermesh.apiserver.tls.authMode "legacy")
+}}
 ---
 apiVersion: v1
 kind: ConfigMap
