--- a/argocd-helm-charts/cilium/charts/cilium/templates/hubble-ui/clusterrolebinding.yaml
+++ b/argocd-helm-charts/cilium/charts/cilium/templates/hubble-ui/clusterrolebinding.yaml
@@ -1,4 +1,4 @@
-{{- if and (or .Values.hubble.enabled .Values.hubble.ui.standalone.enabled) .Values.hubble.ui.enabled .Values.serviceAccounts.ui.create }}
+{{- if and (or .Values.hubble.enabled .Values.hubble.ui.standalone.enabled) .Values.hubble.ui.enabled .Values.serviceAccounts.ui.create .Values.rbac.create }}
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
