--- a/argocd-helm-charts/cilium/charts/cilium/templates/hubble/tls-helm/relay-server-secret.yaml
+++ b/argocd-helm-charts/cilium/charts/cilium/templates/hubble/tls-helm/relay-server-secret.yaml
@@ -1,9 +1,9 @@
 {{- if and .Values.hubble.enabled .Values.hubble.tls.enabled .Values.hubble.tls.auto.enabled (eq .Values.hubble.tls.auto.method "helm") .Values.hubble.relay.enabled .Values.hubble.relay.tls.server.enabled }}
-{{- $_ := include "hubble-generate-certs.helm.setup-ca" . -}}
+{{- $_ := include "cilium.ca.setup" . -}}
 {{- $cn := "*.hubble-relay.cilium.io" }}
 {{- $ip := .Values.hubble.relay.tls.server.extraIpAddresses }}
 {{- $dns := prepend .Values.hubble.relay.tls.server.extraDnsNames $cn }}
-{{- $cert := genSignedCert $cn $ip $dns (.Values.hubble.tls.auto.certValidityDuration | int) .ca -}}
+{{- $cert := genSignedCert $cn $ip $dns (.Values.hubble.tls.auto.certValidityDuration | int) .commonCA -}}
 ---
 apiVersion: v1
 kind: Secret
@@ -16,7 +16,7 @@ metadata:
   {{- end }}
 type: kubernetes.io/tls
 data:
-  ca.crt:  {{ .ca.Cert | b64enc }}
+  ca.crt:  {{ .commonCA.Cert | b64enc }}
   tls.crt: {{ $cert.Cert | b64enc }}
   tls.key: {{ $cert.Key  | b64enc }}
 {{- end }}
