--- a/argocd-helm-charts/cilium/charts/cilium/templates/spire/agent/clusterrolebinding.yaml
+++ b/argocd-helm-charts/cilium/charts/cilium/templates/spire/agent/clusterrolebinding.yaml
@@ -1,4 +1,4 @@
-{{- if and .Values.authentication.mutual.spire.enabled .Values.authentication.mutual.spire.install.enabled .Values.authentication.mutual.spire.install.agent.serviceAccount.create -}}
+{{- if and .Values.authentication.mutual.spire.enabled .Values.authentication.mutual.spire.install.enabled .Values.authentication.mutual.spire.install.agent.serviceAccount.create .Values.rbac.create -}}
 ---
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
