--- a/argocd-helm-charts/cilium/charts/cilium/templates/spire/server/clusterrole.yaml
+++ b/argocd-helm-charts/cilium/charts/cilium/templates/spire/server/clusterrole.yaml
@@ -1,4 +1,4 @@
-{{- if and .Values.authentication.mutual.spire.enabled .Values.authentication.mutual.spire.install.enabled .Values.authentication.mutual.spire.install.server.serviceAccount.create -}}
+{{- if and .Values.authentication.mutual.spire.enabled .Values.authentication.mutual.spire.install.enabled .Values.authentication.mutual.spire.install.server.serviceAccount.create .Values.rbac.create -}}
 
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
