[CI] Helm Chart Update fluent-bit

--- a/argocd-helm-charts/fluent-bit/charts/fluent-bit/templates/clusterrole.yaml
+++ b/argocd-helm-charts/fluent-bit/charts/fluent-bit/templates/clusterrole.yaml
@@ -13,6 +13,7 @@ rules:
       - pods
       {{- if .Values.rbac.nodeAccess }}
       - nodes
+      - nodes/metrics
       - nodes/proxy
       {{- end }}
       {{- if .Values.rbac.eventsAccess }}
